# OOP-MISIS-2023

./: .gitignore
Kuliasov_I_A/rational/: CMakeLists.txt  Rational.cpp  main.cpp  rational.hpp
kuliasov_i_a/: .build.bat  .gitignore  CMakeLists.txt
kuliasov_i_a/prj.kr/orto/: orto.cpp
kuliasov_i_a/prj.lab/: CMakeLists.txt
kuliasov_i_a/prj.lab/arrayd/: arrayd.cpp  main.cpp
kuliasov_i_a/prj.lab/arrayd/include/arrayd/: arrayd.hpp
kuliasov_i_a/prj.lab/arrayt/include/arrayt/: arrayt.hpp
kuliasov_i_a/prj.lab/matrixs/: matrixs.cpp
kuliasov_i_a/prj.lab/matrixs/include/matrixs/: matrixs.hpp
kuliasov_i_a/prj.lab/rational/: rational.cpp
kuliasov_i_a/prj.lab/rational/include/rational/: rational.hpp
kuliasov_i_a/prj.test/: CMakeLists.txt  arrayd_test.cpp  arrayt_test.cpp  matrixs_test.cpp  rational_test.cpp
